Full professional portfolio with DevOps and animations

--- a/index.html
+++ b/index.html
@@ -11,12 +11,18 @@
 <header>
   <img src="profile.jpg" alt="Mostafa Anwar" class="profile-img">
   <h1>Mostafa Anwar Farhat</h1>
-  <p>Embedded Systems • Cloud Computing • Generative AI</p>
+  <p>Embedded Systems • Cloud Computing • DevOps • Generative AI</p>
 </header>
 
 <section>
   <h2>About Me</h2>
-  <p>I am an engineer with a strong interest in Embedded Systems, Cloud Computing, and Generative AI technologies. Passionate about creating innovative solutions and learning new technologies.</p>
+  <p>
+    I am an engineer with a strong passion for Embedded Systems, Cloud Computing, DevOps, and Generative AI. 
+    Over the years, I have gained practical experience through training programs and hands-on projects that enhanced 
+    my skills in developing innovative solutions. I enjoy working on challenging projects, learning new technologies, 
+    and applying them to solve real-world problems. My focus is on integrating cloud solutions, embedded systems, 
+    and AI technologies to create efficient and scalable systems.
+  </p>
 </section>
 
 <section>
@@ -28,15 +34,34 @@
 <section>
   <h2>Experience</h2>
   <ul>
-    <li><b>Cloud Computing & Generative AI Trainee</b> – NTI / MCIT</li>
-    <li>Embedded Systems & IoT Training</li>
-    <li>Generative AI Applications & Prompt Engineering</li>
+    <li>
+      <b>Cloud Computing & Generative AI Trainee – NTI / MCIT</b><br>
+      Participated in an intensive training program covering AWS cloud services, cloud infrastructure deployment, 
+      and building applications using Generative AI. Developed multiple projects integrating AI models with cloud platforms.
+    </li>
+    <li>
+      <b>Embedded Systems & IoT Training</b><br>
+      Worked on designing embedded systems using microcontrollers and sensors. Implemented IoT projects that involved 
+      data collection, wireless communication, and real-time monitoring. Gained practical knowledge of programming 
+      in C and C++ for hardware applications.
+    </li>
+    <li>
+      <b>Generative AI Applications & Prompt Engineering</b><br>
+      Explored advanced AI tools to generate content, analyze data, and design prompts for AI models. Learned to 
+      optimize AI outputs for practical use cases, including cloud-integrated AI solutions.
+    </li>
+    <li>
+      <b>DevOps Projects (Self-Practice)</b><br>
+      Applied DevOps principles to streamline software deployment and integration. Set up CI/CD pipelines, 
+      automated testing, and containerized applications using Docker. Focused on improving efficiency and reliability 
+      of software delivery processes.
+    </li>
   </ul>
 </section>
 
 <section>
   <h2>Technical Skills</h2>
-  <p>C, C++, Python | AWS | Embedded C | Generative AI | Networking</p>
+  <p>C, C++, Python | AWS | Embedded C | Generative AI | DevOps | Networking</p>
 </section>
 
 <section>
